--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
-body {
+body{
     font-family: Arial, sans-serif;
     background-image: url(./img/fundo.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
     padding: 0;
+    display: flex;
 }
 
-header {
+.conteudo{
+    width: 100%;
+    height: 100vh;
+}
+
+.header-h1 {
+    width: 100%;
     height: 80px;
     background-color: #000000;
     display: flex;
@@ -55,6 +62,7 @@ main {
     width: 25%;
     height: 100vh;
     background-color: #f5f5f5;
+    border-right: 2px #000000 solid;
 }
 
 .resultados h2 {
@@ -96,6 +104,32 @@ main {
     margin: 4px 0 0;
     font-size: 14px;
     color: #666;
+}
+
+.mensagens{
+    background-color: white;
+    width: 100%;
+    padding: 1rem;
+}
+.nomeContato{
+    background-color: #000000;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    padding-left: 2rem;
+}
+.nomeContato h2{
+    margin: 0;
+    color: #fff;
+}
+
+.mensagem-eu{
+    background-color: #666;
+    width: auto;
+}
+
+.mensagem-ele{
+    background-color: #ccc;
 }
 
 @media (max-width: 600px) {
