--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: Arial, sans-serif;
     background-image: url(./img/fundo.png);
     background-repeat: no-repeat;
@@ -8,7 +8,7 @@ body{
     display: flex;
 }
 
-.conteudo{
+.conteudo {
     width: 100%;
     height: 100vh;
 }
@@ -22,7 +22,7 @@ body{
     justify-content: center;
 }
 
-h1{
+h1 {
     color: #ffffff;
     margin: 0;
 }
@@ -47,7 +47,6 @@ h1{
 .entrando:focus {
     border-color: #000000;
 }
-
 
 main {
     max-width: 600px;
@@ -106,30 +105,54 @@ main {
     color: #666;
 }
 
-.mensagens{
+.mensagens {
     background-color: white;
     width: 100%;
-    padding: 1rem;
+    height: 80vh; /* Ajusta a altura para dar espaço à área de mensagens */
+    overflow-y: auto; /* Permite rolagem se as mensagens ultrapassarem o espaço */
+    padding: 16px;
 }
-.nomeContato{
+
+.nomeContato {
     background-color: #000000;
     height: 4rem;
     display: flex;
     align-items: center;
     padding-left: 2rem;
 }
-.nomeContato h2{
+
+.nomeContato h2 {
     margin: 0;
     color: #fff;
 }
 
-.mensagem-eu{
-    background-color: #666;
-    width: auto;
+.mensagem-eu {
+    background-color: #969696;
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin: 8px 0;
+    border-radius: 8px;
+    justify-content: flex-end; /* Coloca as mensagens do usuário à direita */
 }
 
-.mensagem-ele{
+.mensagem-ele {
     background-color: #ccc;
+    color: #333;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin: 8px 0;
+    border-radius: 8px;
+    justify-content: flex-start; /* Coloca as mensagens do contato à esquerda */
+}
+
+.mensagem-eu span,
+.mensagem-ele span {
+    font-size: 0.8rem;
+    margin-left: 10px;
+    color: #777;
 }
 
 @media (max-width: 600px) {
@@ -162,5 +185,9 @@ main {
 
     .entrando {
         font-size: 0.95rem;
+    }
+
+    .mensagens {
+        padding: 10px;
     }
 }
