--- a/style.css
+++ b/style.css
@@ -108,10 +108,12 @@ main {
 .mensagens {
     background-color: white;
     width: 100%;
-    height: 80vh; /* Ajusta a altura para dar espaço à área de mensagens */
-    overflow-y: auto; /* Permite rolagem se as mensagens ultrapassarem o espaço */
+    height: 100vh; 
     padding: 16px;
+    display: flex;
+    flex-direction: column;
 }
+
 
 .nomeContato {
     background-color: #000000;
@@ -127,26 +129,25 @@ main {
 }
 
 .mensagem-eu {
+    max-width: 30%;
     background-color: #969696;
     color: white;
-    display: flex;
-    align-items: center;
     padding: 10px;
-    margin: 8px 0;
+    margin: 8px 0 8px auto; /* auto no lado direito para empurrar para a direita */
     border-radius: 8px;
-    justify-content: flex-end; /* Coloca as mensagens do usuário à direita */
+    align-self: flex-end;
 }
 
 .mensagem-ele {
+    max-width: 30%;
     background-color: #ccc;
     color: #333;
-    display: flex;
-    align-items: center;
     padding: 10px;
-    margin: 8px 0;
+    margin: 8px auto 8px 0; /* auto no lado esquerdo para manter à esquerda */
     border-radius: 8px;
-    justify-content: flex-start; /* Coloca as mensagens do contato à esquerda */
+    align-self: flex-start;
 }
+
 
 .mensagem-eu span,
 .mensagem-ele span {
